--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ python-daemon==2.2.0
 mysqlclient==1.4.1
 SQLAlchemy==1.2.17
 python-dotenv==0.10.1
+#click==6.7
+#jinja2==2.10
 PyYAML==5.1
-click==6.7
+pytest==4.3.1
