--- a/requirements.txt
+++ b/requirements.txt
@@ -4,8 +4,8 @@ python-daemon==2.2.0
 mysqlclient==1.4.1
 SQLAlchemy==1.2.19
 python-dotenv==0.10.1
-click==6.7
+Click==7.0
 jinja2==2.10.1
 PyYAML==5.1
 pytest==4.3.1
-requests==2.21.0
+requests==2.22.0
